<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/fragment_quality"
        android:name="com.example.footballscore.view.HomeFragment"
        android:label="@string/title_rank"
        tools:layout="@layout/fragment_football" />

    <fragment
        android:id="@+id/fragment_profil"
        android:name="com.example.footballscore.view.ProfilFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/fragment_football"
        android:name="com.example.footballscore.view.FootballFragment"
        android:label="@string/title_football"
        tools:layout="@layout/fragment_football" />

</navigation>