<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_quarter_register"
            android:orientation="vertical">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/baslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/running"
        android:drawablePadding="12dp"
        android:drawableTint="#407a8e"
        android:fontFamily="@font/faster_one"
        android:text="@string/kayit_title"
        android:textColor="#407a8e"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/kayit_mail"
        style="@style/MyCustomeEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_custom_style"
        android:fontFamily="monospace"
        android:hint="@string/kayit_mail_hint"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/kayit_kullanici_adi"
        style="@style/MyCustomeEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_custom_style"
        android:fontFamily="monospace"
        android:hint="@string/kayit_Kullanici_adiniz"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/kayit_sifre"
        style="@style/MyCustomeEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_custom_style"
        android:fontFamily="monospace"
        android:inputType="numberPassword"
        android:hint="@string/kayit_sifre_hint"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:textSize="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_kayit_ol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bbutton_custom_style"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/button_kayip_yap"
        android:textColor="@color/white"
        android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_kayit_yaptiysaniz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/okkk"
                    android:drawableTint="#407a8e"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/kayit_yaptiysaniz_tiklayin"
                    android:textColor="#407a8e"
                    android:textSize="18sp"
                    tools:ignore="OnClick" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>